# edmo

./: .dockerignore  .gitignore  Dockerfile.linux  LICENSE  README.md  SPEC.md  TASKS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: fetch-tts.ps1  fetch-tts.sh  intel.ts  make-icon.mjs  replay.ts  saga-proto.ts
site/: UPLOAD-README.txt  index.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/engine/: convo.ts  copilot.ts  detectType.ts  exobio.ts  explore.ts  flavor.ts  glance.ts  heartbeat.ts  journal.ts  lmstudio.ts  lore.ts  materials.ts  memory.ts  operator.ts  parse.ts  replay.ts  saga.ts  ship.ts  spansh.ts  state.ts  stats.ts  status.ts  steps.ts  tools.ts  trade.ts  types.ts
src/ui/: App.tsx  Feed.tsx  MissionCard.tsx  SettingsPanel.tsx  bridge.ts  main.tsx  modelfit.ts  settings.ts  store.ts  styles.css  tts.ts  util.ts  voices.ts
tests/: briefing.test.ts  cargogain.test.ts  convo.test.ts  copilot.test.ts  detectType.test.ts  exobio.test.ts  explore.test.ts  flavor.test.ts  heartbeat.test.ts  integration.test.ts  intel.test.ts  killcount.test.ts  materials.test.ts  memory.test.ts  modelfit.test.ts  newfamilies.test.ts  saga.test.ts  ship.test.ts  spansh.test.ts  state.test.ts  stats.test.ts  status.test.ts  steps.test.ts  tools.test.ts  trade.test.ts
