[package]
name = "ed-mission-operator"
version = "0.3.0"
description = "Elite Dangerous Mission Operator — always-on-top HUD with journal ingestion, LM Studio AI operator, and local Piper TTS"
authors = ["Mika Leiman"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["time"] }
cpal = "0.15"
hound = "3"

[target."cfg(windows)".dependencies]
# Screen glances (GDI capture) and the zip-packaged whisper build are
# Windows-only; Linux uses tar + skips glances.
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
windows-registry = "0.6"
windows-sys = { version = "0.59", features = [
    "Win32_System_SystemInformation",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
codegen-units = 1
lto = true
strip = true
